// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component should render a component 1`] = `
<nav
  className="navbar navbar-expand-sm bg-dark navbar-dark"
>
  <a
    className="navbar-brand"
    href="/"
  >
    Authors Haven
  </a>
  <button
    className="navbar-toggler"
    data-target="#collapsibleNavbar"
    data-toggle="collapse"
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    className="collapse navbar-collapse"
    id="collapsibleNavbar"
  >
    <ul
      className="navbar-nav"
    >
      <Connect(UserNavigation) />
    </ul>
  </div>
</nav>
`;

exports[`Header Component should render the header component correctly 1`] = `
<nav
  className="navbar navbar-expand-sm bg-dark navbar-dark"
>
  <a
    className="navbar-brand"
    href="/"
  >
    Authors Haven
  </a>
  <button
    className="navbar-toggler"
    data-target="#collapsibleNavbar"
    data-toggle="collapse"
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    className="collapse navbar-collapse"
    id="collapsibleNavbar"
  >
    <ul
      className="navbar-nav"
    >
      <GuestNavigation
        showLoginModal={[MockFunction]}
        showSignupModal={[MockFunction]}
      />
    </ul>
  </div>
</nav>
`;
